configuración de fuentes, colores y etiquetas

--- a/figuras.html
+++ b/figuras.html
@@ -15,7 +15,7 @@
 <body>
     <header class="main-header">
         <h2 class="main-header__title">
-            CALCULA DISTINTAS MEDIDAS DE LAS FIGURAS
+            CALCULA MEDIDAS GEOMÉTRICAS
         </h2>
     </header>
     <main class="main-container">
@@ -27,7 +27,9 @@
                 </figure>
                 <h3 class="header__title">cuadrado</h3>
             </header>
-            <p class="container__p">¿Cuánto mide cada lado del cuadrado?</p>
+            <em>
+                <p class="container__p">¿Cuánto mide cada lado del cuadrado?</p>
+            </em>
             <form class="square-form-container">
                 <div class="square-form-container__wrapper">
                     <div class="form__input-container">
@@ -58,7 +60,9 @@
                 </figure>
                 <h3 class="header__title">triángulo isósceles</h3>
             </header>
-            <p class="container__p">¿Cuánto mide cada lado del triángulo "isósceles"?</p>
+            <em>
+                <p class="container__p">¿Cuánto mide cada lado del triángulo "isósceles"?</p>
+            </em>
             <form class="square-container__form">
                 <div class="square-form-container__wrapper--triangle">
                     <div class="form__input-container form__input-container--triangle">
@@ -95,7 +99,9 @@
                 </figure>
                 <h3 class="header__title">circunferencia</h3>
             </header>
-            <p class="container__p">¿Cuánto mide el radio de la circunferencia?</p>
+            <em>
+                <p class="container__p">¿Cuánto mide el radio de la circunferencia?</p>
+            </em>
             <form class="circle-container__form">
                 <div class="square-form-container__wrapper">
                     <div class="form__input-container">
