Edit discounts.html and .js file

--- a/percentages_and_discounts/discounts.html
+++ b/percentages_and_discounts/discounts.html
@@ -20,8 +20,8 @@
             <label for="PriceInput">Escribe el precio de tu producto</label>
             <input type="number" name="" id="PriceInput">
 
-            <label for="PromotionCodeInput">Escribe el código de tu cupón</label>
-            <input type="text" name="" id="PromotionCodeInput">
+            <label for="CouponInput">Escribe el código de tu cupón</label>
+            <input type="text" name="" id="CouponInput">
 
             <button type="button" onclick="priceDiscountBtn()">CALCULAR</button>
 
