link files update

--- a/geometric_figures/figures.html
+++ b/geometric_figures/figures.html
@@ -128,6 +128,6 @@
             <p class="container__result--p" id="circleOutput"></p>
         </section>
     </main>
-    <script src="./figuras.js"></script>
+    <script src="./figures.js"></script>
 </body>
 </html> 
