Statistics design and interactivity complete!

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -12,7 +12,16 @@
 
     <h1>Median</h1>
 
+    <input type="text" id="inputMedian">
+    <button id="medianBtn" onclick="calcMedianBtn()">calcular</button>
+    <p id="outputMedian"></p>
+    
     <h1>Mode</h1>
+    
+    <input type="text" id="inputMode">
+    <button id="modeBtn" onclick="calcModeBtn()">calcular</button>
+    <p id="outputMode"></p>
+
     <script src="./js/statistics.js"></script>
     <script src="./js/median.js"></script>
     <script src="./js/mode.js"></script>
